--- a/rng_game-main/rng_game/style.css
+++ b/rng_game-main/rng_game/style.css
@@ -111,6 +111,12 @@ body {
     flex: 1 1 150px;  /* Zorgt ervoor dat de breedte van elk item hetzelfde is */
     font-size: 1.2rem;  /* Zorg ervoor dat de tekstgrootte altijd consistent is */
     box-sizing: border-box;  /* Houdt rekening met padding en borders voor de boxgrootte */
+    height: 4em;
+        /* Ensure each card is 4 lines tall */
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 10px;
 }
 
 .common {
